--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^4.7.0
+  onesignal_flutter: ^5.2.0
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
