Fix: Correct Podfile helper script

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,6 @@
+# السطر التالي هو الذي كان مفقوداً ويسبب الخطأ
+load File.join(File.dirname(File.realpath(__FILE__)), 'Flutter', 'generated_config_helper.rb')
+
 platform :ios, '13.0'
 
 target 'Runner' do
@@ -5,4 +8,10 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    flutter_additional_ios_build_settings(target)
+  end
 end
