--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,11 +4,12 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
-  # سطر بديل لا يعتمد على الملفات المفقودة
+  # تأكد من وجود هذا السطر للسماح لـ Flutter بتثبيت الإضافات تلقائياً في السحابة
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
+    flutter_additional_ios_build_settings(target) if defined?(flutter_additional_ios_build_settings)
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
       config.build_settings['ENABLE_BITCODE'] = 'NO'
