--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,22 +1,38 @@
-name: Build iOS
+name: Flutter Build iOS
 
 on:
   push:
-    branches: [ master ] # سيعمل عند كل رفع كود لفرع master كما يظهر في صورتك
+    branches: [ master ] # سيعمل عند كل رفع كود لفرع master
 
 jobs:
   build:
-    runs-on: macos-14 # استخدام أحدث سيرفر متاح
+    runs-on: macos-14
     
     steps:
+      # 1. سحب الكود
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Xcode
-        run: sudo xcode-select -s /Applications/Xcode_15.4.app
+      # 2. تثبيت Java (مطلوب لبعض أدوات بناء أندرويد/فلاتر)
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Build
+      # 3. تثبيت Flutter
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.24.0' # يمكنك تغييرها لإصدارك المفضل
+          channel: 'stable'
+
+      # 4. تحميل المكتبات (Dependencies)
+      - name: Install dependencies
+        run: flutter pub get
+
+      # 5. بناء تطبيق iOS (بدون توقيع رقمي)
+      - name: Build iOS
         run: |
-          # سنقوم ببناء المشروع للتأكد من سلامة الكود
-          # ملاحظة: إذا كان اسم مشروعك مختلف عن orthodox_app، غيره هنا
-          xcodebuild build -scheme orthodox_app -sdk iphonesimulator
+          # بناء نسخة للـ Simulator للتأكد من سلامة الكود برمجياً
+          flutter build ios --no-codesign --simulator
